redis/ingress-redis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #creationTimestamp: "2024-09-19T13:44:59Z"
  generation: 1
  name: redis
  namespace: redis
spec:
  ingressClassName: nginx
  rules:
  - host: tsp1-acc-redis.bgr.tollingservices.eu
    http:
      paths:
      - backend:
          service:
            name: redis-master
            port:
              number: 6379
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tsp1-acc-redis.bgr.tollingservices.eu
    secretName: tsp1-acc-redis.bgr.tollingservices.eu-tls
